--- a/.github/workflows/test_github_action.yml
+++ b/.github/workflows/test_github_action.yml
@@ -24,3 +24,11 @@ jobs:
         uses: github/codeql-action/upload-sarif@v2
         with:
           sarif_file: results.sarif
+      - name: SOOS SCA Analysis
+        uses: soos-io/soos-sca-github-action@v1.2.3
+        with:
+          project_name: ${{ github.repository }}
+          sarif: "true"
+          gpat: ${{ secrets.GITHUB_PERSONAL_ACCESS_TOKEN }}
+          client_id: ${{ secrets.SOOS_CLIENT_ID }}
+          api_key: ${{ secrets.SOOS_API_KEY }}
