--- a/.github/workflows/test_github_action.yml
+++ b/.github/workflows/test_github_action.yml
@@ -1,4 +1,4 @@
-name: SOOS DAST GitHub Actions
+name: SOOS GitHub Actions
 
 # Controls when the workflow will run
 on: [push]
@@ -33,3 +33,4 @@ jobs:
           api_url: "https://dev-api.soos.io/api/"
           client_id: ${{ secrets.SOOS_CLIENT_ID }}
           api_key: ${{ secrets.SOOS_API_KEY }}
+          package_managers: "npm"
